[package]
name = "docker_lens"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "docker_lens"
crate-type = ["cdylib"]

[dependencies]
pyo3 = "0.27.0"
bollard = "*"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
