[package]
name = "docker_lens"
version = "1.0.1"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "docker_lens"
crate-type = ["cdylib"]


[dependencies]
pyo3 = "0.27.0"
bollard = "0.20"
tokio = { version = "1", features = ["full"] }
walkdir = "2"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
rusqlite = { version = "0.31", features = ["bundled"] }
csv = "1.3"
mongodb = "2"
bson = "2"
futures = "0.3"
serde_json = "1.0"
